Fix the height,alignment and caption of table

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 
-* {
-  margin: 0;
-  /* padding: 0; */
-}
+
 body, main
 {
   min-height: 100vh;
+  height: 100%;
 }
 
 .Profile {
@@ -31,14 +29,6 @@ body, main
   font-size: large;
   
 }
-
-table,
-th,
-td {
-  border: 3px solid black;
-
-}
-
 .link_container {
 
   text-align: center;
@@ -81,26 +71,31 @@ img {
   border-radius: 50%;
 }
 
-.projects{
+#projects{
   color: rgb(255, 255, 255);
   background:linear-gradient(rgb(0, 0, 0), rgba(49, 47, 47, 0.8)), url("/Images/we.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-attachment: fixed;
   height: auto;
 }
 #major{
-  padding-left: 400px;
-  height: 550px;
-  width: 96.75%;
-  padding-top:150px;
+  
+  min-height: 100vh;
+  width: 100%;
   color: rgb(255, 255, 255);
-  overflow: hidden;
   background: linear-gradient(rgb(0, 0, 0), rgba(71, 68, 68, 0.8)), url("/Images/maj.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  line-height: 35px;
-  font-size: x-large;
+}
+table,th,td 
+{
+  border: 3px solid rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  
+}  
+caption
+{
+color: white;
 }
 .navbar .navbar-nav .nav-link:hover
 {
